tests/NormalTests/paczka1/fuzzy1/46902547.err
Error in line 3: GC7 S205 52,8
Error in line 20: mjbZEFTf S205 99,1
Error in line 23: 2wN4F S560 76,0
Error in line 27: 2wN4F S2E5 69,2
Error in line 22: mjbZEFTf S124 85,2
Error in line 34: mjbZEFTf A615 28,54
